# bda

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
presenation/: assignment1.tex
src/assignment_1/: README_information_CSV_files.txt  location_anomalies.py  main.py  task-description.md  vessel_anomalies.py
src/utils/: timer_wrapper.py
tests/: test_assignment_1.py  test_location_anomalies.py  test_preprocess_vessel_spatial_data.py  test_preprocess_vessel_temporal_data.py  test_vessel_anomalies.py
