[tool.poetry]
name = "bda"
version = "0.1.0"
description = ""
authors = ["Griffo <davide.griffon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"
pandas = "^2.2.3"
tqdm = "^4.67.1"
ipykernel = "^6.29.5"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
